# gprofiler_custom_gmt

./: .gitignore  pyproject.toml
gprofiler_custom_gmt/: main.py  test.gmt
tests/: genes.txt  output.csv  pharmGKB.gmt  test_gprofiler_custom_gmt.py
